--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       let currentCellIndex = 0;
       let cells = [
         { type: "text", content: "This is a text cell"},
-        { type: "code", content: "console.log('Hello, World!')", output:"test" },
+        { type: "code", content: "console.log('Hello, World!')", output:"Hello, World!" },
       ];
 
       const renderCell = (cell, index) => {
